--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-<h1>Hello</h1>
-<script>
-    window.location.href = "https://www.youtube.com/watch?v=D0q0QeQbw9U";
-</script>
+<h4>ah yes</h4>
+<h2>dijey!</h2>
