--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<h4>ah yes</h4>
-<h2>dijey!</h2>
+<title>0xfe7a115 & 0xfffffff</title><center><h4 style="font-family:Arial;font-size:12px;">ah yes</h4><h2 style="font-family:Arial;font-size:12px;">heker!</h2> <img src="https://i.imgur.com/f38iks6.jpg" /></center>
