--- a/mc-1.16.1.html
+++ b/mc-1.16.1.html
@@ -56,12 +56,12 @@
     <h3>idk</h3>
     <hr />
 	<code>
-		CCInstance: 0x36DE720 + 0x38<br />
-		CLocalPlayer: CCInstance + 0x140<br />
-		PlayerAuthInput: 0x36E0B40<br />
-		ClientToServer: 0x36E0740<br />
-		CraftingEvent: 0x36E0AE0<br />
-		Interact: 0x36D1A60<br />
+		CCInstance: 0x36DE720 + 0x38 <b>class</b><br />
+		CLocalPlayer: CCInstance + 0x140 <b>class</b><br />
+		PlayerAuthInput: 0x36E0B40 <b>struct</b><br />
+		ClientToServer: 0x36E0740 <b>struct</b><br />
+		CraftingEvent: 0x36E0AE0 <b>struct</b><br />
+		Interact: 0x36D1A60 <b>struct</b><br />
 	</code>
     <!-- <a class="btn btn-lg btn-primary" href="/docs/4.5/components/navbar/" role="button">View navbar docs &raquo;</a>-->
     </div>
