--- a/thing/index.html
+++ b/thing/index.html
@@ -8,9 +8,9 @@
         <h4>thing</h4>
         <span id="average_fps">{{loading...}}</span><br />
         <span id="ent_size">{{loading...}}</span><br />
-        <span id="local_pos">{{loading...}}</span><br />
-        <span id="scr2w">{{loading...}}</span><br />
-        <span id="w2scr">{{loading...}}</span><br />
+        <b>local->position:</b> <span id="local_pos">{{loading...}}</span><br />
+        <b>screen to world</b>: <span id="scr2w">{{loading...}}</span><br />
+        <b>world to screen</b>: <span id="w2scr">{{loading...}}</span><br />
         <canvas id="susi_canvas" width="800" height="600" style="border:1px solid #000;"></canvas>
         <script src="drawings.js"></script>
         <script src="collider.js"></script>
@@ -19,7 +19,7 @@
         <script src="entities.js"></script>
         <script src="megastruct.js"></script>
         <script src="scene.js"></script>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/unYAWpvG6jo?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/unYAWpvG6jo?rel=0&autoplay=1" height="598" width="400" allow="autoplay"></iframe>
         <script>
             let scene = new c_scene()
             
