--- a/thing/index.html
+++ b/thing/index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <h4>thing</h4>
-        <span id="average_fps">{{loading...}}</span><br />
-        <span id="ent_size">{{loading...}}</span><br />
+        <b>controllers: </b> w, a, s, d, l-shift ( for speed boi )<br />
+        <b>fps:</b> <span id="average_fps">{{loading...}}</span><br />
+        <b>max players: </b><span id="ent_size">{{loading...}}</span><br />
         <b>local->position:</b> <span id="local_pos">{{loading...}}</span><br />
         <b>screen to world</b>: <span id="scr2w">{{loading...}}</span><br />
         <b>world to screen</b>: <span id="w2scr">{{loading...}}</span><br />
@@ -17,6 +18,7 @@
         <script src="player.js"></script>
         <script src="controller.js"></script>
         <script src="entities.js"></script>
+        <script src="world.js"></script>
         <script src="megastruct.js"></script>
         <script src="scene.js"></script>
         <iframe src="https://www.youtube.com/embed/unYAWpvG6jo?rel=0&autoplay=1" height="598" width="400" allow="autoplay"></iframe>
