--- a/fool.html
+++ b/fool.html
@@ -68,7 +68,7 @@
         <script src="js/memes/megastruct.js"></script>
         <script src="js/memes/scene.js"></script>
         <iframe src="https://www.youtube.com/embed/unYAWpvG6jo?rel=0&autoplay=1" height="598" width="400" allow="autoplay"></iframe>
-		<iframe width="420" height="315" source="https://www.youtube.com/embed/unYAWpvG6jo?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+		<iframe width="420" height="315" src="https://www.youtube.com/embed/unYAWpvG6jo?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 	
 		<script>
             let scene = new c_scene()
