--- a/thing/index.html
+++ b/thing/index.html
@@ -12,6 +12,7 @@
         <b>local->position:</b> <span id="local_pos">{{loading...}}</span><br />
         <b>screen to world</b>: <span id="scr2w">{{loading...}}</span><br />
         <b>world to screen</b>: <span id="w2scr">{{loading...}}</span><br />
+        <input type="range" min="1" max="100" value="7" id="bounce_range"><br />
         <canvas id="susi_canvas" width="800" height="600" style="border:1px solid #000;"></canvas>
         <script src="drawings.js"></script>
         <script src="collider.js"></script>
