--- a/collision.html
+++ b/collision.html
@@ -14,113 +14,7 @@
         </style>
         <canvas style="border:1px solid rgb(0, 0, 0);"></canvas>
         <script>
-            let canvas = document.querySelector( "canvas" ),
-                context = canvas.getContext( "2d" );
-
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-
-            class c_mouse2d
-            {
-                constructor()
-                {
-                    this.pos = { x: 0, y: 0 };
-                    this.size = { x: 200, y: 200 };
-                    this.setup_mouse_coords( );
-                };
-
-                setup_mouse_coords()
-                {
-                    document.onmousemove = ((e) => {
-                        this.pos.x = e.clientX - ( this.size.x / 2 );
-                        this.pos.y = e.clientY - ( this.size.y / 2 );
-                    });
-                };
-
-                render_mouse( )
-                {
-                    context.strokeStyle = "#FFFFFF";
-                    context.strokeRect(this.pos.x, this.pos.y, this.size.x, this.size.y);
-                };
-            };
-
-            let mouse = new c_mouse2d( );
-
-            class c_rect
-            {
-                constructor( interceptor )
-                {
-                    this.size = { x: 200, y: 200 };
-                    this.pos = { x: canvas.width / 2 - ( this.size.x / 2 ), y: canvas.height / 2 - ( this.size.y / 2 ) };
-                    this.m = interceptor;
-                    this.collide_state = "None";
-                    this.state = "";
-                };
-
-                draw_rectangle( )
-                {
-                    context.fillStyle = "rgba(52, 140, 167, 255)";
-                    context.fillRect( this.pos.x, this.pos.y, this.size.x, this.size.y );
-
-                    context.font = "20px Arial";
-                    context.fillStyle = "white";
-                    context.fillText( "x", this.pos.x, this.pos.y - 2 );
-                    context.fillText( "w", this.pos.x + this.size.x - 12, this.pos.y - 2 );
-                   
-                    context.fillText( "y", this.pos.x + this.size.x + 2, this.pos.y + 12 );
-                    context.fillText( "h", this.pos.x + this.size.x + 2, this.pos.y + this.size.y - 2 );
-
-                    let a_center_x = this.m.pos.x - ( this.m.size.x / 2 );
-                    let a_center_y = this.m.pos.y - ( this.m.size.y / 2 );
-
-                    let dest_center_x = this.pos.x - ( this.size.x / 2 );
-                    let dest_center_y = this.pos.y - ( this.size.y / 2 );
-
-                    let vec_x = a_center_x - dest_center_x;
-                    let vec_y = a_center_y - dest_center_y;
-
-                    if( vec_y * vec_y > vec_x * vec_x )
-                    {
-                        if( vec_y > 0 )
-                            this.collide_state = "yes";
-                        else
-                            this.collide_state = "no";
-                    } else {
-                        if( vec_x > 0 )
-                            this.collide_state = "maybe yes";
-                        else
-                            this.collide_state = "maybe no";
-                    }
-
-                    context.beginPath();
-                    context.moveTo(this.pos.x - 160, this.pos.y - 160);
-                    context.lineTo(this.pos.x + this.size.x + 160, this.pos.y + this.size.y + 160 );
-
-                    context.moveTo(this.pos.x + this.size.x + 160, this.pos.y - 160);
-                    context.lineTo(this.pos.x - 160, this.pos.y + this.size.y + 160 );
-
-                    context.stroke(); 
-                    context.strokeRect( this.pos.x - 60, this.pos.y - 60, this.size.x + 120, this.size.y + 120 );
-                    context.fillText( this.collide_state, canvas.width / 2 - ( this.collide_state.length * 4.0 ) * 2.0, 120 );
-                    this.state = "x: " + vec_x + ", y: " + vec_y;
-                    context.fillText( this.state, canvas.width / 2 - ( this.collide_state.length * 4.0 ) * 2.0, 150 );
-                };
-            };
-
-            let rects = new c_rect( mouse );
-
-            let loop_callback = (() => {
-                
-                context.clearRect( 0, 0, canvas.width, canvas.height );
-                context.fillStyle = "rgba( 25, 25, 25, 255 )";
-                context.fillRect( 0, 0, canvas.width, canvas.height );
-
-                rects.draw_rectangle( );
-                mouse.render_mouse( );
-
-                window.requestAnimationFrame(loop_callback);
-            });
-            window.requestAnimationFrame(loop_callback);
+            let canvas=document.querySelector("canvas"),context=canvas.getContext("2d");canvas.width=window.innerWidth,canvas.height=window.innerHeight;let c_platform=class{constructor(){this.x=200,this.y=500,this.w=500,this.h=25}render_text(t,e){context.font="14px Arial",context.fillStyle="#fff",context.fillText(t,e.x,e.y)}render(){context.fillStyle="#45A6BC",context.fillRect(this.x,this.y,this.w,this.h),this.render_text("platform",{x:this.x,y:this.y-80}),this.render_text("x",{x:this.x,y:this.y-10}),this.render_text("w",{x:this.x+this.w-10,y:this.y-10}),this.render_text("y",{x:this.x+this.w+5,y:this.y+6}),this.render_text("h",{x:this.x+this.w+5,y:this.y+this.h-2})}get aabb(){return{x:this.x,y:this.y,w:this.w,h:this.h}}};const keyboard={w:87,a:65,s:83,d:68,space:32};let c_player=class{constructor(t){this.x=240,this.y=90,this.w=25,this.h=25,this.velocity={x:0,y:0},this.on_ground=!1,this.platform=t,this.moveLeft=!1,this.moveRight=!1,this.moveUp=!1,document.onkeydown=(t=>{t.keyCode==keyboard.a&&(this.moveLeft=!0),t.keyCode==keyboard.space&&(this.moveUp=!0),t.keyCode==keyboard.d&&(this.moveRight=!0)}),document.onkeyup=(t=>{t.keyCode==keyboard.a&&(this.moveLeft=!1),t.keyCode==keyboard.space&&(this.moveUp=!1),t.keyCode==keyboard.d&&(this.moveRight=!1)})}setupPlayer(t=25,e=25){document.onmousemove=(t=>{this.x=t.clientX,this.y=t.clientY}),this.w=t,this.h=e}render_text(t,e){context.font="14px Arial",context.fillStyle="#fff",context.fillText(t,e.x,e.y)}is_colliding_top(){let t=this.platform.aabb;return this.x+this.w>t.x&&this.x<t.x+t.w&&this.y+this.h>t.y-4&&this.y+this.h<t.y+4}clamp_movement(){this.velocity.x>6?this.velocity.x=6:this.velocity.x<-6&&(this.velocity.x=-6),this.velocity.y>8?this.velocity.y=8:this.velocity.y<-8&&(this.velocity.y=-8)}movement(){this.on_ground?this.moveUp?(this.velocity.y-=1,this.on_ground=!0):this.velocity.y=0:this.velocity.y+=.06,this.moveRight?this.velocity.x+=.06:this.velocity.x>.06&&(this.velocity.x-=.06),this.moveLeft?this.velocity.x-=.06:this.velocity.x<0&&(this.velocity.x+=.06),this.y+this.h>canvas.height&&(this.y=0),this.y+=this.velocity.y,this.x+=this.velocity.x,this.clamp_movement()}render(){if(context.fillStyle=this.is_colliding_top()?"#BC456B":"#9C7984",context.fillRect(this.x,this.y,this.w,this.h),this.movement(),this.render_text(this.on_ground?"OnGround: true ":"OnGround: false",{x:20,y:20}),this.render_text("velocity (x: "+this.velocity.x+", y: "+this.velocity.y+")",{x:20,y:40}),this.render_text("remicks.site",{x:20,y:60}),this.is_colliding_top()){this.on_ground=!0;let t=this.platform.aabb;this.y=t.y-this.h}else this.on_ground=!1}},plat=new c_platform,mouse=new c_player(plat),loop_callback=()=>{context.clearRect(0,0,canvas.width,canvas.height),context.fillStyle="rgba( 25, 25, 25, 255 )",context.fillRect(0,0,canvas.width,canvas.height),plat.render(),mouse.render(),window.requestAnimationFrame(loop_callback)};window.requestAnimationFrame(loop_callback);
         </script>
     </body>
 </html>
