--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="idk">
-    <title>r e m i c k s</title>
+    <title>g u w i</title>
 
     <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -41,7 +41,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">remicks</a>
+  <a class="navbar-brand" href="#">guwi</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -49,7 +49,7 @@
 <br /><br /><br /><br />
 <main role="main" class="container">
   <div class="jumbotron">
-    <h3>r e m i c k s</h3>
+    <h3>g u w i</h3>
     <p>C/C++ Developer, creating all kinds of stuff.</p>
     </div>
 </main>
